[2.0] Update for Minecraft 1.2 - fixed configuration and permissions bugs - no longer can power fences 10 blocks down. (let me know if you want this change back) - damage can now be properly configured

--- a/plugin.yml
+++ b/plugin.yml
@@ -1,4 +1,4 @@
 name: ElectricFence
-author: darksoft
+author: darksoft/patrickfreed
 main: org.darksoft.electricfence.ElectricFence
-version: 1.9
+version: 2.0
